--- a/client/app/stage/stage.css
+++ b/client/app/stage/stage.css
@@ -1,14 +1,18 @@
 #stage_info	{
-	padding: 55px 10px 10px 10px;
-	height: 400px;
-	background-color: #007EA7;
-	color: white;
-	float: right;
+	margin:0px auto 0px;
+    padding:0px 10px 10px;
+    position: absolute;
+    top:20%;
+    right:2%;
+    z-index: 10;
+    background-color: rgba(36,123,160,0.9);            
+    border-radius: 0px;
+    color: white;
 }
 #stage_pic	{
 	padding: 2px;
-	border:1px solid grey;
-	background-color: white;
+	
+	
 	height: 400px;
 	overflow: hidden;
 }
