--- a/client/app/profile/profile.css
+++ b/client/app/profile/profile.css
@@ -70,14 +70,15 @@
             }
             .w2b    {
                 background-color: rgba(255,255,255,0.8);
-                padding: 10px;
+                padding: 5px 10px;
                 border: 0px;
+                color: black;
 
             }
             .w2b:hover    {
                 background-color: #247ba0;
                 color: white;
-                border: 1px solid #247ba0;
+                
                 border: 0px;
             }            
             #HOF_display    {
@@ -100,6 +101,24 @@
 
                 
             }
+            #upld_display  {
+                display: none;
+                color: rgba(255,255,255,0.7);
+                margin: 10px 25%;
+                
+                opacity: 1;
+                background-color: rgba(255,255,255,0.05);
+
+            }
+            .active {
+                border:0px;
+                background-color: none;
+            }
+            .upld_form  {
+                width: 60%;
+                margin: 30px 20%;
+
+            }
             #HOF_display span   {
                 padding: 20px; 
 
@@ -108,12 +127,26 @@
                 background-color: rgba(38,88,132,1);
                 font-size: 14px;
                 border: 0px;
+                color: white;
+                padding: 5px 10px;
+                margin:;
+                    -webkit-transition: all 0.5s ease;
+                     -moz-transition: all 0.5s ease;
+                       -o-transition: all 0.5s ease;
+                      -ms-transition: all 0.5s ease;
+                          transition: all 0.5s ease;
 
             }
-            .b2w  {
+            .b2w:hover  {
                 background-color: white;
                 color: #247ba0;
                 border: 0px;
+            }
+            #up_art {
+                padding: 50px 50px;
+                border-radius: 75px;
+                margin: 0px 5%;
+                box-shadow: 1px 1px 5px black;
             }
             #upload_btn     {
                 position: absolute;
@@ -172,6 +205,7 @@
                 width: 100%;
                 position: relative;
                 height: auto;
+                padding: 0px 0px 100px;
             }
             #user_hist_div1  {
                 margin:10px auto;
