--- a/client/app/stage/stage.css
+++ b/client/app/stage/stage.css
@@ -12,18 +12,64 @@
 #stage_pic	{
 	padding: 2px;
 	
-	
 	height: 400px;
 	overflow: hidden;
 }
 #stage_content	{
-	background-color: white;
+	
 	height: 400px;
 	padding: 0px;
+
+}
+#bkd {
+	 -webkit-transition: all 0.5s ease;
+                     -moz-transition: all 0.5s ease;
+                       -o-transition: all 0.5s ease;
+                      -ms-transition: all 0.5s ease;
+                          transition: all 0.5s ease;
+}
+#stage_content_wrap	{
+	margin: 5px;
+	box-shadow: 0px 0px 3px grey;
+	background-color: rgba(255,255,255,0.8);
+	padding: 10px 30px;		
 }
 .nav-tabs	{
-	background-color: grey;
+	background-color: rgba("255,255,255,0.7");
+	color: black;
 }
 .tab-content	{
 	padding: 10px;
+}
+.nav-tabs > li.active > a{
+	background-color: white;
+	color: grey	;
+	border-radius: 0px;
+}
+.stage_nav_wrap_out	{
+	width: 100%;
+}
+#stage_nav	{
+	position: absolute;
+	bottom: 0px;
+	background-color: rgba(255,255,255,0.9);
+	padding: 0px 30%;
+	width: 100%;
+}
+#stage_nav li	{
+	width: 33.333%;
+	text-align: center;
+	background-color: rgba(255,255,255,0);
+	border:0px;
+	color: white;
+}
+#stage_nav li:hover	{
+	color: grey;
+}
+#stage_nav .active	{
+	background-color: white;
+}
+
+.col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
+	padding: 0px;
 }
