add good css to login/signup, stage, event

--- a/client/app/dashboard/dashboard.css
+++ b/client/app/dashboard/dashboard.css
@@ -50,12 +50,15 @@
             
             margin: 0px;
             width: 100%;
-            background: transparent;
-            background-image: url("http://www.wall321.com/thumbnails/detail/20120623/abstract%20blue%20dark%20textures%20backgrounds%201920x1080%20wallpaper_www.wall321.com_11.jpg");           
-            background-repeat: repeat-x;
+          
+            background-image: url("http://www.wall321.com/thumbnails/detail/20120623/abstract%20blue%20dark%20textures%20backgrounds%201920x1080%20wallpaper_www.wall321.com_11.jpg");          
            padding: 0px;
            background-repeat: repeat;   
     }
+        #dashboard_wrap {
+            background-color: rgba(0,0,0,0);         
+
+        }
         #clubs_list {
             padding: 10px;
             
@@ -187,6 +190,6 @@
         }
         #col-mxxd-3 {
             height: 120px;
-        }
-
+        }   
+       
   
