--- a/client/app/profile/profile.css
+++ b/client/app/profile/profile.css
@@ -73,6 +73,7 @@
                 padding: 5px 10px;
                 border: 0px;
                 color: black;
+                border-radius: 0px;
 
             }
             .w2b:hover    {
@@ -101,7 +102,7 @@
 
                 
             }
-            #upld_display  {
+            #upld_display {
                 display: none;
                 color: rgba(255,255,255,0.7);
                 margin: 10px 25%;
@@ -129,6 +130,7 @@
                 border: 0px;
                 color: white;
                 padding: 5px 10px;
+                border-radius: 0px;
                 margin:;
                     -webkit-transition: all 0.5s ease;
                      -moz-transition: all 0.5s ease;
@@ -201,7 +203,8 @@
                 height:700px;
             }
             #art_wrap {
-                background-image: url("http://10steps.sg/wp-content/uploads//2012/11/White-christmas-light-background.jpg");
+                background-image: url("http://www.wall321.com/thumbnails/detail/20120623/abstract%20blue%20dark%20textures%20backgrounds%201920x1080%20wallpaper_www.wall321.com_11.jpg");
+                background-repeat: repeat;   
                 width: 100%;
                 position: relative;
                 height: auto;
