--- a/client/app/viewPage/viewPage.css
+++ b/client/app/viewPage/viewPage.css
@@ -91,6 +91,7 @@
                 
                 width: 70%;
                 margin:0% auto;
+                box-shadow: 1px 1px 10px black;
               }
               .wrapper {
                   float:none;
