--- a/client/app/uploadPortal/uploadPortal.css
+++ b/client/app/uploadPortal/uploadPortal.css
@@ -81,10 +81,11 @@
 	.img_modal-body #img_viewed	{
 		box-shadow: 0px 20px 50px #000;
 	}
-	#up000;
+	#up000{
 		width: 100%;
+	
 	}
-	#play	{
+	.play	{
 		width: 10%;
 		height:14%;
 		position: absolute;
@@ -113,26 +114,39 @@
 		 padding: 10px;
 		 color: white;
 	}
-	#event_det	{
+	.text_type_post	{
 		background-color: rgba(230,230,230,1);
-		padding: 10px 10px 30px;
+		padding: 10px 10px 10px;
 		box-shadow: 1px 1px 5px grey;
 		font-family: arial;
 		letter-spacing: 1px;
-		font-size: 13px;
-		height: 200px;
-		color: grey;
+		font-size: 13px;		
+		color: black;
 
+	}
+	#event_det	{
+		height: 200px;
+	}
+	#article	{
+		min-height: 200px;
+		height: auto;
 	}
 
 	#event_det div {
-		color: grey;
+		color: black;
 		font-size: 10px;
 		position: absolute;
 		bottom: 0px;
 		padding: 5px;
 		width: 100%;
 
+	}
+	#post_time	{
+		color: grey;
+		width: 100%;
+		padding: 5px 10px 5px 10px;
+		float: left;
+		background-color: rgba(230,230,230,1);
 	}
 	#event_post_heading	{
 		font-size: 25px;
