--- a/client/app/uploadPortal/uploadPortal.css
+++ b/client/app/uploadPortal/uploadPortal.css
@@ -85,8 +85,8 @@
 		width: 100%;
 	
 	}
-	.play	{
-		width: 10%;
+	.play img	{
+		width: 5%;
 		height:14%;
 		position: absolute;
 		top: 43%;
@@ -94,6 +94,12 @@
 		margin: 0px auto;
 		left: 45%;
 	 	}
+	 .play	{
+	 	display: block;
+	 }
+	.thumbs_in:hover .play	{
+		display: hidden;
+	}
 
 	 	#user_poster    {
                 width: 100%
@@ -128,7 +134,6 @@
 		height: 200px;
 	}
 	#article	{
-		min-height: 200px;
 		height: auto;
 	}
 
