--- a/client/app/profile/profile.css
+++ b/client/app/profile/profile.css
@@ -166,6 +166,20 @@
                 background-color: white;
                 color: #247ba0;
             }
+            #gal_pic_edit   {
+                position: absolute;
+                bottom: 200px;
+                z-index: 1;
+                right:20px;
+                display: hidden;
+                
+            }
+            #pro_pic_wrapper:hover #gal_pic_edit    {
+                display: block;
+            }
+            #pro_pic_wrapper    {
+                position: relative;
+            }
             .thumbs_out {
                 margin:10px 0px;
                 float: left;
