--- a/client/components/modal/modal.html
+++ b/client/components/modal/modal.html
@@ -1,11 +1,364 @@
-<div class="modal-header">
-  <button ng-if="modal.dismissable" type="button" ng-click="$dismiss()" class="close">&times;</button>
-  <h4 ng-if="modal.title" ng-bind="modal.title" class="modal-title"></h4>
+
+		<!-- Modal -->
+  <div class="modal img_modal fade" id="gal_pic_modal" role="dialog">
+    <div class="modal-dialog img_modal-dialog" id="modal-center">
+    
+      <!-- Modal content-->
+     
+        
+        <div class="modal-body img_modal-body centric glassy">
+        	<p>New Gallery Pic</p>
+          <input ng-model="galPicUrl" placeholder="New Url of gallery Picture" class="form-control">
+          <button type="button" class="btn btn-default" ng-click="editGalleryPic(galPicUrl)">Submit</button>
+        </div>
+        
+      </div>
+      
+    </div>
+  </div>
+
+  	
+  
+
+
+<!--***********************************upload section******************************************-->
+	        								
+
+			<div class="booking_body">
+
+					<div id="upload" class="modal img_modal fade" role="dialog">
+						<div class="modal-dialog img_modal-dialog">
+
+						<!-- Modal content-->
+					      
+								
+				        	<div class="modal-body img_modal-body centric">
+				        		<button type="button" class="close img_close" data-dismiss="modal" onclick="document.getElementById('for_blur').style.filter = 'blur(0px)'">&times;</button>
+				        		<div onclick="document.getElementById('upld_display').style.display = 'block'">
+					        		<a href="#article_form" data-toggle="tab" ><button type="button" class="b2w" id="up_art">Article</button></a>
+					        		<a href="#img_form" data-toggle="tab" ><button type="button" class="b2w" id="up_art">Image</button></a>
+					        		<a href="#video_form" data-toggle="tab" ><button type="button" class="b2w" id="up_art">Video</button></a>
+					        	</div>
+
+
+				        		<div id="upld_display"  class="tab-content col-md-6">
+		        					<button type="button" class="close" onclick="document.getElementById('HOF_display').style.display = 'none'">&times;</button>
+									<ul class="nav nav-tabs">
+									 	 <li class="active"><a data-toggle="tab" href="#upload_form">Info</a></li>
+									    <li><a href="#credits" data-toggle="tab">Credits</a></li>
+									</ul>
+
+									<div class="tab-content">
+										<div class="tab-pane fade in active" id="upload_form" ng-controller="UploadPortalCtrl">
+											<div class="tab-content">
+
+											<!--************Video Upload Form********-->
+												<div id="video_form" class="tab-pane fade" >
+													<h3>Add your Video here</h3>
+													<form name="form" ng-submit="videoSubmit(form)" ng-model="form">
+														<div class="form-group">
+															
+															<input type="text" class="form-control upld_form" ng-model="form.vidName" placeholder="Name of Video">
+														</div>
+														<div class="form-group">
+															
+															<input type="text" class="form-control upld_form" ng-model="form.vidUrl" placeholder="Youtube link to video">
+														</div>
+														<div class="form-group">
+															
+															<input type="text" class="form-control upld_form" ng-model="form.posterUrl" placeholder="Poster Url">
+														</div>
+														<div class="form-group"> <!-- need to put select with multi option selection -->
+															<label>Genre/Category</label>
+															<select ng-model="form.genres" class="form-control upld_form" placeholder="Genres">
+																<option value="horror">horror</option>
+																<option value="comedy">comedy</option>
+															</select>   <!-- Make it a maximum of three using array size in controller -->
+														</div>
+														<div class="form-group"> <!-- Put text area -->
+															
+															<input type="text" class="form-control upld_form" ng-model="form.description" placeholder="Description">
+														</div>
+														<div class="form-group">
+															<label>Stage to be tagged</label>
+															
+														</div>
+														<button type="submit" class="b2w">Submit</button>
+													</form>
+
+												</div>
+										
+												<!--***************Article Upload form**************-->
+
+												<div id="article_form"  class="tab-pane fade">
+													<h3>Add your Article here</h3>
+													<form name="form" ng-submit="articleSubmit(form)" ng-model="form">
+														<div class="form-group">
+															<input type="text" class="form-control upld_form" ng-model="form.articleName" placeholder="Article Name">
+														</div>
+														<div class="form-group">
+															<input type="text" class="form-control upld_form" ng-model="form.description" placeholder="Description">
+														</div>
+														<div class="form-group">	
+															<textarea  class="form-control upld_form" ng-model="form.content" placeholder="Type your Article" ></textarea>
+														</div>
+														<div class="form-group">	
+															<input type="text" class="form-control upld_form" ng-model="form.tags" placeholder="Tag a category">
+														</div>
+															<button type="submit" class="b2w">Submit</button>
+													</form>
+												</div>
+
+												<!--**********Image Upload Form******************-->
+
+												<div id="img_form"  class="tab-pane fade">
+													<h3>Add your Image here</h3>
+													<form name="form" ng-submit="imageSubmit(form)" ng-model="form">
+														<div class="form-group">
+															<input type="text" class="form-control upld_form" ng-model="form.imgName" placeholder="Image Name">
+														</div>
+														<div class="form-group">
+															<input type="text" class="form-control upld_form" ng-model="form.description" placeholder="Description">
+														</div>
+														<div class="form-group">	
+															<input type="text" class="form-control upld_form" ng-model="form.picUrl" placeholder="Image Url">
+														</div>
+														<div class="form-group">	
+															<input type="text" class="form-control upld_form" ng-model="form.tags" placeholder="Tag a category">
+														</div>
+															<button type="submit" class="b2w">Submit</button>
+													</form>
+												</div>
+											</div>
+
+										</div>
+										<div id="credits" class="tab-pane fade">
+										    <h3>Credits</h3>
+										    <div class="col-md-6">
+								      			<label>Credit</label>
+								      			<div>
+								      				<tags-input ng-model="credits.directors" display-property="creditDetail" add-from-autocomplete-only="true" max-tags='1'>
+      													<auto-complete 
+      													source="getSuggestionsForCredits($query)"
+      													min-length='1'
+      													>
+      													</auto-complete>
+    												</tags-input>
+    												<p>Model: {{credits.credit}}</p>
+    											</div>
+								      		</div>
+								      		<div class="col-md-6">
+								      			<label>Directors</label>
+								      			<div>
+								      				<tags-input ng-model="credits.creditNames" display-property="name" add-from-autocomplete-only="true">
+      													<auto-complete 
+      													source="getSuggestionsForNames($query)"
+      													min-length='1'>
+      													</auto-complete>
+    												</tags-input>
+    												<p>Model: {{credits.creditNames}}</p>
+    											</div>
+								      		</div>
+								      		<div ng-repeat="credit in credits">
+								      			<label>{{credit.name}}</label>
+								      			<tags-input ng-model="result.{{credit.name}}" display-property="name" add-from-autocomplete-only="true">
+      												<auto-complete 
+      											source="getSuggestions($query)"
+      											min-length='1'>
+      												</auto-complete>
+    											</tags-input>
+    											<p>{{result}}</p>
+								      		</div>
+								      		<div>
+								      			<label>Editors</label>
+								      			<tags-input ng-model="credits.editors" display-property="name" add-from-autocomplete-only="true">
+      												<auto-complete 
+      													source="getSuggestions($query)"
+      													min-length='1'>
+      												</auto-complete>
+    											</tags-input>
+    											<p>Model: {{credits.editors}}</p>
+								      		</div>
+								      		<div>
+								      			<h2>Add Credits</h2>
+								      		</div>
+								    	</div>
+									</div>
+										
+								</div>
+							
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+
+<!--********************************upload section closes***********************************-->
+
+
+<!-- IMAGE Modal -->
+<div id="img_view" class="img_modal modal fade" role="dialog">
+<div class="centric ">
+  <div class="modal-dialog img_modal-dialog">
+
+    <!-- Modal content-->
+   
+     
+        
+       
+   
+      <div class="modal-body img_modal-body">
+      	<button type="button" class="close img_close" data-dismiss="modal" onclick="document.getElementById('for_blur').style.filter = 'blur(0px)'">&times;</button>
+      	<div="wrapper">
+        <img src="http://beautifulyoucoachingacademy.com/wp-content/uploads/2014/01/Beautiful-Day-1024x640.jpg"	id="img_viewed">
+	        <div id="img_viewed_info">
+	       		<img src="assets/images/fade2black.png" height="70px" width="100%" style="opacity:0.5;" alt="">
+		        <div id="img_name">Name</div>
+		        <img src="assets/images/fade2black btm.png" height="70px" width="100%" style="opacity:0.5;" alt="" id="img_shade_bottom">
+		        <div id="img_des">DescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescription</div>
+	        </div>
+        </div>
+        <div id="img_des_com" class="glassy col-md-8">
+	       	
+			  <ul class="nav nav-tabs">			  	
+			    <li><a data-toggle="tab" href="#img_description">Description</a></li>
+			    <li class="active"><a data-toggle="tab" href="#img_comments">Comments</a></li>
+			  </ul>
+
+			  <div class="tab-content">
+			    
+			    <div id="img_description" class="tab-pane fade">
+			      <h3>Description</h3>
+			      <p>Image description goes here</p>
+			    </div>
+			    <div id="img_comments" class="tab-pane fade in active">
+			      <h3>Comments</h3>
+			      <p>Comments go here</p>
+			    </div>
+			  </div>
+
+
+		</div>
+
+
+      
+    
+
+  </div>
 </div>
-<div class="modal-body">
-  <p ng-if="modal.text" ng-bind="modal.text"></p>
-  <div ng-if="modal.html" ng-bind-html="modal.html"></div>
 </div>
-<div class="modal-footer">
-  <button ng-repeat="button in modal.buttons" ng-class="button.classes" ng-click="button.click($event)" ng-bind="button.text" class="btn"></button>
+
+
+
+<!--****************************************Video view modal***************************-->
+
+<div id="videoview" class="modal img_modal fade" role="dialog">
+<div class="centric">
+  <div class="modal-dialog img_modal-dialog">
+
+    <!-- Modal content-->
+   
+     
+        
+       
+   
+      <div class="modal-body img_modal-body">
+      <button type="button" class="close img_close" data-dismiss="modal" onclick="document.getElementById('for_blur').style.filter = 'blur(0px)'">&times;</button>
+
+
+      <div ng-controller="ViewPageCtrl">
+    
+
+    <div  id="video">
+        <div class="wrapper">
+         <img src="http://www.solidbackgrounds.com/images/1280x720/1280x720-ghost-white-solid-color-background.jpg" alt="" id="video_play"/>
+         <iframe  src="https://www.youtube.com/embed/3p_R7K13-Fs" frameborder="0" allowfullscreen></iframe>
+            
+        </div>
+        <div class="content" id="title">
+            <span id="video_name">{{video.vidname}}</span>
+        </div>
+        <div simple ng-model="rating1" max="5" on-rating-selected="rateFunction(rating)"></div>
+    </div>
+      <!-- info, comments, reviews etc of video-->
+        <div class="stage col-md-9"  id="vid_stuff">
+            <div class="content">
+            <!--Crew and cast-->
+                <div id="credits" >
+                <!--credits start-->
+                
+ 
+  
+                     
+                        
+                      
+                    </div>
+
+                   
+                <!--credits end-->
+
+               
+                </div>
+                <!--Best part, comments, review-->
+                <ul class="nav nav-tabs" id="view_page_tabs">
+                        <li class="active"><a data-toggle="tab" href="#best_part">Best Part</a></li>
+                        <li><a href="#comments" data-toggle="tab">Comments</a></li>
+                        <li><a href="#reviews" data-toggle="tab">Reviews</a></li>
+                 </ul>
+
+                 <!--tab content-->
+                <div class="tab-content">
+                    <div id="best_part" class="tab-pane fade in active">
+                        <h3>Best part<hr></hr></h3>
+                    </div>
+                    <div id="comments" class="tab-pane fade">
+                        
+                        <div>
+                            <div>
+                                <h4>Leave a Comment:</h4>
+                                <form name="myForm" ng-submit="submit()" class="form" novalidate> 
+                                    <div class="form-group">
+                                        <textarea class="form-control" rows="auto" ng-model="commentData"></textarea>
+                                    </div>
+                                    <button type="submit" class="btn btn-primary">Submit</button>
+                                </form>
+                            </div>
+                            <ul id="comments_list">
+                                <li ng-repeat="comment in video.comments" >
+                                    
+                                    <div class="thumbs_wrap comments">
+                                    
+                                         <img src="http://www.infinitetechnologies.co.in/wp-content/uploads/2015/07/f3.jpg" width="70px" height="70px">
+                                        <span class="commenter">{{comment.comment.commentPutter}}</span>
+                                     <!--   <span><img src="http://www.rottweilerheartsrescue.org/Images/fade2black.png" height="30px" width="100%" style="opacity:0.5;z-index:9;position:absolute"></span>-->
+                                        <span id="comment_data">{{comment.comment.commentData}}</span><br>
+                                        <span id="comment_time">{{comment.comment.datePosted | date:'medium'}}
+                                        <span  ng-show="comment.comment.commentPutter===user.name" ng-click="delete(comment.comment._id)"><a href="#">Delete</a></span>
+                                        <span  ng-show="comment.comment.commentPutter===user.name" ng-click="toggleVal=!toggleVal"><a href="#">Edit</a></span></span>
+                                        <div class="form-group" ng-show="toggleVal">
+                                            <textarea class="form-control" rows="3" ng-model="editData"></textarea>
+                                            <button class="btn btn-default" ng-click="edit(comment.comment._id,editData)">Submit</button>
+                                        </div>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div id="reviews" class="tab-pane fade">
+                    <!--add review part here-->
+                        <h2>Reviews<hr></hr></h2>
+                    </div>
+                </div>
+            </div>
+        </div>
+        
+    
+</div>
+
+      </div>
+      
+    
+
+  </div>
+</div>
 </div>
