--- a/client/components/modal/modal.html
+++ b/client/components/modal/modal.html
@@ -8,7 +8,7 @@
         
         <div class="modal-body img_modal-body centric glassy">
         	<p>New Gallery Pic</p>
-        	<form name="form" ng-submit="editGalleryPic(form)" ng-model="form">
+        	<form name="form" ng-submit="editProfile(form.galPicUrl,3)" ng-model="form">
         		<div class="form-group">
 	          		<input type="text" ng-model="form.galPicUrl" placeholder="New Url of gallery Picture" class="form-control">
 	          	</div>
