--- a/client/components/modal/modal.html
+++ b/client/components/modal/modal.html
@@ -25,6 +25,30 @@
   </div>
 
   	
+
+  			<div ng-controller="DatepickerDemoCtrl">
+  					 <div class="modal img_modal fade" id="date_picker" role="dialog">
+						    <div class="modal-dialog img_modal-dialog" id="modal-center">
+						    
+						      <!-- Modal content-->
+						     
+						        
+						       		<div class="modal-body img_modal-body centric glassy">
+												 <div class="col-md-6 datepckr">
+										            <p class="input-group">
+										              <input type="text" class="form-control" datepicker-popup="{{format}}" ng-model="dt" is-open="opened" min-date="minDate" max-date="'2037-06-22'" datepicker-options="dateOptions" date-disabled="disabled(date, mode)" ng-required="true" close-text="Close" style="height:34px" />
+										              <span class="input-group-btn">
+										                <button type="button" class="btn btn-default" ng-click="open($event)"><i class="glyphicon glyphicon-calendar"></i></button>
+										              </span>
+										            </p>
+										        </div> 
+									</div> 
+								</div>
+		        
+					      </div>
+					      
+					</div>
+			</div>
   
 
 
