--- a/client/app/viewPage/viewPage.css
+++ b/client/app/viewPage/viewPage.css
@@ -19,6 +19,7 @@
             #video_name {
                 font-size:30px;
                 width:840;
+                color: white;
                 position:relative;
             }
             #vid_stuff  {
