--- a/client/components/modal/modal.css
+++ b/client/components/modal/modal.css
@@ -21,3 +21,115 @@
 .modal-danger .modal-header {
   background: #d9534f;
 }
+
+.bootstrap .tags {
+
+  background-color: #fff;
+
+  border: 1px solid #ccc;
+
+  border-radius: 4px;
+  font-size: 12px;
+
+  box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
+
+  transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+
+}
+
+
+.bootstrap .tags.focused {
+
+  border-color: #66afe9;
+
+  box-shadow: inset 0 1px 1px rgba(0,0,0,0.075), 0 0 8px rgba(102,175,233,0.6);
+
+}
+
+
+.bootstrap .tags .tag-item {
+	text-align: left;
+
+  background: #428bca;
+
+  border: 1px solid #357ebd;
+
+  border-radius: 4px;
+
+  color: #fff;
+
+}
+
+
+.bootstrap .tags .tag-item.selected {
+	text-align: left;
+
+  background: blue;
+
+  border: 1px solid #d43f3a;
+
+  border-radius: 0px;
+
+  color: #fff;
+
+}
+
+
+.bootstrap .tags .tag-item button {
+
+  background: transparent;
+
+  color: #000;
+
+  opacity: .4;
+
+}
+
+
+.bootstrap .autocomplete {
+	text-align: left;
+  border-radius: 0px;
+
+}
+
+
+.bootstrap .autocomplete .suggestion-item.selected {
+	font-size: 12px;
+
+
+  color: #262626;
+
+  background-color: #e9e9e9;
+
+}
+
+
+.bootstrap .autocomplete .suggestion-item em {
+	font-size: 12px;
+
+	font-size: 
+  font-weight: bold;
+
+  background-color: none;
+
+}
+
+.bootstrap .autocomplete .suggestion-item  {
+	font-size: 12px;
+
+	font-size: 
+  font-weight: bold;
+
+  background-color: none;
+
+}
+
+
+.bootstrap .autocomplete .suggestion-item.selected em {
+	font-size: 12px;
+
+  color: #262626;
+
+  background-color: white;
+
+}
