--- a/client/app/dashboard/dashboard.css
+++ b/client/app/dashboard/dashboard.css
@@ -75,8 +75,8 @@
             background-color: rgba(230,230,230,0.1);
             box-shadow: 0px 0px 3px grey;
             float: left;
-            height: 600px;
-            padding: 10px;
+            height: auto;
+            padding: 0px;
             width: 100%;
          
             text-align: center;
